--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,35 +1,33 @@
-cmake_minimum_required(VERSION 3.8)
-project(ekf_localization)
+cmake_minimum_required(VERSION 3.10)
+project(ekf_localization VERSION 1.0)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(Eigen3 REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(std_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(Eigen3 3.3 REQUIRED)
 
-add_executable(ekf_localization src/ekf.cpp)
+add_executable(ekf_localization src/ekf.cpp src/localization_node.cpp src/main.cpp)
 
-target_include_directories(ekf_localization PUBLIC ${EIGEN3_INCLUDE_DIR}) 
-ament_target_dependencies(ekf_localization rclcpp std_msgs)
+ament_target_dependencies(ekf_localization PUBLIC
+  rclcpp 
+  sensor_msgs 
+  geometry_msgs
+  Eigen3
+)
 
 install(TARGETS
   ekf_localization
-  DESTINATION lib/${PROJECT_NAME})
+  DESTINATION lib/${PROJECT_NAME}
+)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+target_include_directories(ekf_localization PUBLIC
+  "${PROJECT_SOURCE_DIR}/include"
+)
+
 
 ament_package()
